[package]
name = "retro-3d"
version = "0.1.0"
edition = "2021"

[profile.release]
# lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace]
members = ["lib/*"]

[dependencies]
window = { path = "lib/window" }
input = { path = "lib/input" }
maths = { path = "lib/maths" }
physics = { path = "lib/physics" }
collections = { path = "lib/collections" }
png = "0.17.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Media"] }
